--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>About Me</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- Drop Menu-->
 <body>
     <div> 
         <nav> 
@@ -16,10 +17,76 @@
                 <br>
                 <li> <a href="portfolio.html"> Portfolio</a></li>
                 <br>
+                <li> <a href="contact.html"> Contact</a></li>
             </ul>
         </nav>
         </div>
-  <h1><em> My passions, Interests, and Values </em></h1>      
+        <!--Head of page-->
+  <h1><em> My Passions, Interests, and Values </em></h1>
+  <h3> Love <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2Fpink-heart-wallpaper--859554278886421113%2F&psig=AOvVaw0Lb5Uh-dWbjXqtAunYNupe&ust=1710899828639000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCND6jtac_4QDFQAAAAAdAAAAABAL" width="20px" id="Heart">, Laugh, Learn</h3>
+  <br>
+  <p>
+    The best way to get to know someone is to understand and learn what is valued and important to them.
+    <br> 
+    I like to follow my 3 L's rule.
+  </p>
+  <br> 
+  <!-- start of passions-->
+  <div class="passion"> 
+    <!--Cooking-->
+  <section id="Cooking">
+        <h2> <strong> <em> <u>Passions: </u></em> </strong></h2>
+        <br>
+        <h3 id="Cook"> Cooking ☕︎</h3>
+        <img src="https://stock.adobe.com/images/various-organic-vegetables-ingredients-and-empty-iron-cooking-pot-wooden-bowls-spoons-on-wooden-background-top-view-copy-space-organic-vegetables-ingredients-for-vegan-cooking-clean-eating-food/332753934" width="250">
+        <p> I find comfort in cooking, its a delicous and fun way to decompress and destress any day. 
+            <br>
+            I have learned most of my recipes and cooking skills from my grandma and my great aunt Jane.
+            <br>
+            <h5> Favorite Recipes:</h5>
+            <ul id="recipes">
+            <li> <a href="https://www.myforkinglife.com/jamaican-oxtails/"> Smothered Oxtails </li>
+            <li> <a href="https://www.youtube.com/shorts/1Czw8Wj0hlg"> Tyeraki Salmon + Fried Rice</li>
+            <li> <a href="https://www.fromvalerieskitchen.com/copycat-chipotle-burrito-bowl-recipe/"> Burrito Bowl</li> 
+            <li> <a href="https://www.youtube.com/watch?v=oFkQ8u-XAIE"> Cajun Shrimp Alfredo Pasta</li> 
+            <li> <a href="https://www.thechunkychef.com/family-favorite-baked-mac-and-cheese/"> Baked Mac and Cheese </a></li>
+            <li> <a href="https://downshiftology.com/recipes/best-ever-guacamole/"> Guacamole </a></li>  
+            </ul>
+            
+        </p>
+  </section>  
+  <br>
+  <br>
+  <!-- Graphic Design-->
+  <section id="graphicdesign">
+    <h3 id="Graphic"> Graphic Design </h3>
+    <img id="Shirt1" src="https://lucid-horizon.myshopify.com/cdn/shop/files/8461976781696648271_2048.jpg?v=1708652488&width=2048" width="185">
+    <img id="Shirt2" src="https://lucid-horizon.myshopify.com/cdn/shop/files/4910518671889974055_2048.jpg?v=1708481385&width=2048" width="185">
+    <br> 
+    <img id="Shirt3" src="https://lucid-horizon.myshopify.com/cdn/shop/files/13927784487037033048_2048.jpg?v=1708724452&width=2048" width="185">
+    <br>
+    <img id="Shirt4" src="https://lucid-horizon.myshopify.com/cdn/shop/files/2050702845855124128_2048.jpg?v=1708480086&width=2048" width="185">
+    <img id="Shirt5" src="https://lucid-horizon.myshopify.com/cdn/shop/files/9420024279408343376_2048.jpg?v=1708711170&width=2048" width="185">
+    <p> Graphic design is a way I can express my creativity through my artwork made digitally. 
+        <br>
+         With my preffered platforms for creating digital art being <em> Canva</em> and <em> Adobe Illustrator</em>.
+        <br>
+</p>
+  </section>
+  <br> 
+  <br>
+  <!--Hiking-->
+  <section id="Hiking">
+    <h3 id="Hiking1"> Hiking</h3>
+    <img id="Hike" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Bash_Bish_Falls.jpg/800px-Bash_Bish_Falls.jpg" width="300">
+    <p> A beautiful hiking trail is a great way to enjoy some moderate exercise while also clearing your mind.
+        <br> 
+        I find nature a natural remedy for stress, distractions, and mind blocks.
+        <br> 
+        The photo I chose above is called Bash Bish Falls located in Massachsets. My father use to take me hiking/picnicking there almost every summer.
+    </p>
+  </section>
+  </div>    
     
 </body>
 </html>
